[tool.poetry]
name = "GPT-3 Chatbot"
version = "1.0.0"
description = ""
authors = ["Leonard Maculo <238maculo238@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
openai = "^0.15.0"
colorama = "^0.4.4"
python-Wappalyzer = "^0.3.1"
webpage-reader = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"